--- a/build.gradle
+++ b/build.gradle
@@ -19,20 +19,18 @@ buildscript {
                     'activity_ktx'            : '1.2.0',
                     'fragment_ktx'            : '1.3.0',
             ],
-            'kotlin'                     : '1.4.20',
-            'kotlin_gradle_plugin'       : '1.4.20',
+            'kotlin'                     : '1.5.31',
+            'kotlin_gradle_plugin'       : '1.5.31',
             'coroutines'                 : '1.4.2',
             'material'                   : '1.0.0',
-            'compose'                    : '1.0.0-alpha08',
-            'firebase_core'              : '16.0.9',
-            'firebase_auth'              : '17.0.0',
-            'firebase_database'          : '16.0.3',
-            'firestore'                  : '17.1.1',
+            'compose'                    : '1.0.5',
+            'firebase_auth'              : '21.0.1',
+            'firestore'                  : '24.0.0',
             'firebase_crashlytics'       : '17.2.2',
-            'firebase_crashlytics_gradle': '2.4.1',
-            'google_services'            : '4.2.0',
-            'dagger'                     : '2.29.1',
-            'dagger_hilt'                : '2.29-alpha',
+            'firebase_crashlytics_gradle': '2.5.2',
+            'google_services'            : '4.3.10',
+            'dagger'                     : '2.35.1',
+            'dagger_hilt'                : '2.39.1',
             'threetenabp'                : '1.1.0',
             'timber'                     : '4.7.1',
             'espresso'                   : '3.1.0-alpha4',
@@ -46,7 +44,7 @@ buildscript {
     ]
     ext.buildConfig = [
             'minSdk'    : 21,
-            'compileSdk': 30,
+            'compileSdk': 31,
             'targetSdk' : 28,
     ]
 
@@ -72,7 +70,7 @@ plugins {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url 'https://maven.google.com' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
@@ -94,14 +92,12 @@ task clean(type: Delete) {
 }
 
 
-
 subprojects {
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         kotlinOptions {
             jvmTarget = '1.8'
             useIR = true
-           // allWarningsAsErrors = true
-            freeCompilerArgs += '-Xallow-jvm-ir-dependencies'
+            // allWarningsAsErrors = true
             // Opt-in to experimental compose APIs
             freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
             // Enable experimental coroutines APIs, including collectAsState()
