--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,11 +19,10 @@ jobs:
         env:
           GOOGLE_SERVICES_KEY: ${{ secrets.GOOGLE_SERVICES_KEY }}
 
-
-      - name: set up JDK 1.8
+      - name: set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
 
       - name: Build with Gradle
         run: ./gradlew build
