Add back in kotlinCompilerExtensionVersion as it is needed to avoid getting the "This version (1.0.0-beta07) of the Compose Compiler"

--- a/base-android-library.gradle
+++ b/base-android-library.gradle
@@ -7,6 +7,7 @@ android {
         minSdkVersion buildConfig.minSdk
         targetSdkVersion buildConfig.targetSdk
     }
+    
     buildTypes {
         release {
             minifyEnabled false
@@ -20,6 +21,10 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "${versions.compose}"
     }
 
     testOptions {
