--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
                     'arch_core_testing'       : "1.0.0",
                     'hilt_compiler'           : "1.0.0-alpha02",
                     'hilt_lifecycle_viewmodel': "1.0.0-alpha02",
+                    'hilt_navigation_compose' : "1.0.0-rc01",
+                    'navigation_compose'      : "2.4.0-rc01",
+                    'activity_compose'        : "1.4.0",
                     'activity_ktx'            : '1.2.0',
                     'fragment_ktx'            : '1.3.0',
             ],
