--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     api "androidx.activity:activity-ktx:${versions.androidx.activity_ktx}"
     api "androidx.fragment:fragment-ktx:${versions.androidx.fragment_ktx}"
     api "androidx.hilt:hilt-lifecycle-viewmodel:${versions.androidx.hilt_lifecycle_viewmodel}"
+    api "androidx.hilt:hilt-navigation-compose:${versions.androidx.hilt_navigation_compose}"
 
     api "androidx.recyclerview:recyclerview:${versions.androidx.recyclerview}"
     api "androidx.lifecycle:lifecycle-extensions:${versions.androidx.lifecycle}"
@@ -49,7 +50,8 @@ dependencies {
     api "androidx.compose.animation:animation:${versions.compose}"
     api "androidx.compose.ui:ui-tooling:${versions.compose}"
     api "androidx.compose.runtime:runtime-livedata:${versions.compose}"
-    api "androidx.activity:activity-compose:1.4.0"
+    api "androidx.navigation:navigation-compose:${versions.androidx.navigation_compose}"
+    api "androidx.activity:activity-compose:${versions.androidx.activity_compose}"
 
     testImplementation "junit:junit:${versions.junit}"
     testImplementation "org.robolectric:robolectric:${versions.robolectric}"
