Create authentication and -contract module so we can only use that where needed

--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -3,9 +3,19 @@ apply from: "../base-android-library.gradle"
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
+android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
 dependencies {
     implementation project(":core")
     implementation project(":authentication-contract")
+
+    // api as only app module should depend on this and is needed for hilt
+    api "com.google.firebase:firebase-auth:${versions.firebase_auth}"
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
 
@@ -13,11 +23,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
 
-    api "com.google.firebase:firebase-firestore:${versions.firestore}"
+    testImplementation project(":test_shared")
 
-    testImplementation "junit:junit:${versions.junit}"
-    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
-
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
-    testImplementation "org.mockito:mockito-core:${versions.mockito}"
 }
