--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
     implementation project(":core")
     implementation project(":data")
+    implementation project(":authentication")
+    implementation project(":authentication-contract")
     implementation project(":playerlist")
     implementation project(":importcontacts")
 
