--- a/base-android-library.gradle
+++ b/base-android-library.gradle
@@ -24,7 +24,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "${versions.compose}"
+        kotlinCompilerExtensionVersion "${versions.compose_compiler}"
     }
 
     testOptions {
