--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,12 @@ buildscript {
                     'activity_ktx'            : '1.2.0',
                     'fragment_ktx'            : '1.3.0',
             ],
-            'kotlin'                     : '1.5.31',
-            'kotlin_gradle_plugin'       : '1.5.31',
-            'coroutines'                 : '1.4.2',
+            'kotlin'                     : '1.6.10',
+            'kotlin_gradle_plugin'       : '1.6.10',
+            'coroutines'                 : '1.6.0',
             'material'                   : '1.0.0',
-            'compose'                    : '1.0.5',
+            'compose'                    : '1.1.0-rc01',
+            'compose_compiler'           : '1.1.0-rc02',
             'firebase_auth'              : '21.0.1',
             'firestore'                  : '24.0.0',
             'firebase_crashlytics'       : '17.2.2',
