--- a/base-android-library.gradle
+++ b/base-android-library.gradle
@@ -7,6 +7,11 @@ android {
         minSdkVersion buildConfig.minSdk
         targetSdkVersion buildConfig.targetSdk
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
     
     buildTypes {
         release {
