--- a/build.gradle
+++ b/build.gradle
@@ -84,9 +84,9 @@ task clean(type: Delete) {
 subprojects {
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         kotlinOptions {
-            jvmTarget = '1.8'
-            useIR = true
-            // allWarningsAsErrors = true
+            // Set JVM target to 11
+            jvmTarget = JavaVersion.VERSION_11
+            allWarningsAsErrors = true
             // Opt-in to experimental compose APIs
             freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
             // Enable experimental coroutines APIs, including collectAsState()
