--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
 
     implementation project(":core")
+    implementation project(":core-ui")
     implementation project(":data")
     implementation project(":authentication")
     implementation project(":authentication-contract")
