--- a/importcontacts/build.gradle
+++ b/importcontacts/build.gradle
@@ -11,9 +11,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation project(":core")
+    implementation project(":core-ui")
     implementation project(":data")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
