--- a/playerlist/build.gradle
+++ b/playerlist/build.gradle
@@ -8,12 +8,11 @@ android {
     buildFeatures {
         compose true
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation project(":core")
+    implementation project(":core-ui")
     implementation project(":data")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
