--- a/test_shared/build.gradle
+++ b/test_shared/build.gradle
@@ -3,11 +3,7 @@ apply from: "../base-android-library.gradle"
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation project(":core")
-
-    implementation "junit:junit:${versions.junit}"
 
     api "junit:junit:${versions.junit}"
 
@@ -19,8 +15,14 @@ dependencies {
 
     api "org.robolectric:robolectric:${versions.robolectric}"
 
-    api 'com.google.truth:truth:0.42'
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
+
+    // api 'com.google.truth:truth:0.42'
 
     api 'com.flextrade.jfixture:jfixture:2.7.2'
 
+    androidTestImplementation "androidx.test:runner:${versions.androidx.test_runner}"
+    androidTestImplementation("androidx.test.espresso:espresso-core:${versions.espresso}", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
