--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 include ':app'
 include ':core'
 include ':core-ui'
-include ':authentication'
-include ':authentication-contract'
-include ':data'
+include ':libraries:authentication'
+include ':libraries:authentication-contract'
+include ':libraries:data'
 include ':importcontacts'
 include ':playerlist'
 include ':test_shared'
