--- a/importcontacts/build.gradle
+++ b/importcontacts/build.gradle
@@ -12,7 +12,7 @@ android {
 
 dependencies {
     implementation project(":core-ui")
-    implementation project(":data")
+    implementation project(":libraries:data")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
     kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
