--- a/libraries/data/build.gradle
+++ b/libraries/data/build.gradle
@@ -1,14 +1,11 @@
 apply plugin: 'com.android.library'
-apply from: "../base-android-library.gradle"
+apply from: "../../base-android-library.gradle"
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 dependencies {
     implementation project(":core")
-    implementation project(":authentication-contract")
-
-    // api as only app module should depend on this and is needed for hilt
-    api "com.google.firebase:firebase-auth:${versions.firebase_auth}"
+    implementation project(":libraries:authentication-contract")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
 
@@ -16,6 +13,9 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
 
-    testImplementation project(":test_shared")
+    api "com.google.firebase:firebase-firestore:${versions.firestore}"
+
+    testImplementation "junit:junit:${versions.junit}"
+    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
 
 }
