--- a/playerlist/build.gradle
+++ b/playerlist/build.gradle
@@ -13,7 +13,7 @@ android {
 
 dependencies {
     implementation project(":core-ui")
-    implementation project(":data")
+    implementation project(":libraries:data")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
 
