Similarly introduce foundation direction structure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
 
 dependencies {
 
-    implementation project(":core")
-    implementation project(":core-ui")
+    implementation project(":foundation:core")
+    implementation project(":foundation:core-ui")
     implementation project(":libraries:data")
     implementation project(":libraries:authentication")
     implementation project(":libraries:authentication-contract")
