--- a/foundation/core-test/build.gradle
+++ b/foundation/core-test/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.library'
-apply from: "../base-android-library.gradle"
+apply from: "../../base-android-library.gradle"
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation project(":core")
+    implementation project(":foundation:core")
 
     api "junit:junit:${versions.junit}"
 
