--- a/foundation/core/build.gradle
+++ b/foundation/core/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply from: "../base-android-library.gradle"
+apply from: "../../base-android-library.gradle"
 
 dependencies {
 
