--- a/importcontacts/build.gradle
+++ b/importcontacts/build.gradle
@@ -11,14 +11,14 @@ android {
 }
 
 dependencies {
-    implementation project(":core-ui")
+    implementation project(":foundation:core-ui")
     implementation project(":libraries:data")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
     kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
+    testImplementation project(':foundation:core-test')
 
-    testImplementation project(":test_shared")
 
 }
