--- a/libraries/authentication-contract/build.gradle
+++ b/libraries/authentication-contract/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply from: "../../base-android-library.gradle"
 
 dependencies {
-    implementation project(":core")
-    testImplementation project(":test_shared")
+    implementation project(":foundation:core")
+    testImplementation project(':foundation:core-test')
 
 }
