--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
 
     // remove once https://github.com/Kotlin/kotlinx.coroutines/issues/2023 is fixed
     packagingOptions {
+        exclude "META-INF/licenses/**"
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
     }
