--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
                     'test_core'               : '1.3.0',
                     'test_rules'              : '1.3.0',
                     'test_junit'              : '1.1.2',
+                    'test_core_testing'       : '2.1.0',
                     'hilt_compiler'           : "1.0.0-alpha02",
                     'hilt_lifecycle_viewmodel': "1.0.0-alpha02",
                     'hilt_navigation_compose' : "1.0.0-rc01",
@@ -33,11 +34,13 @@ buildscript {
             'dagger_hilt'                : '2.39.1',
             'threetenabp'                : '1.1.0',
             'timber'                     : '4.7.1',
-            'espresso'                   : '3.1.0-alpha4',
+            'espresso'                   : '3.4.0',
             'junit'                      : '4.12',
-            'hamcrest'                   : '1.3',
+            'hamcrest'                   : '2.2',
             'robolectric'                : '4.0.1',
-            'detek'                      : '1.19.0'
+            'detek'                      : '1.19.0',
+            'truth'                      : '0.42',
+            'jfixture'                   : '2.7.2'
 
     ]
     ext.buildConfig = [
