--- a/foundation/core-android-test/src/main/AndroidManifest.xml
+++ b/foundation/core-android-test/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gregmgowan.fivesorganiser.core.test" />
+    package="com.gregmgowan.fivesorganiser.core.android.test" />
