--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,3 +26,9 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+        
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew connectedCheck
