--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
                     'appcompat'               : '1.2.0',
                     'constraint_layout'       : '1.1.3',
                     'fragment'                : '1.0.0',
-                    'lifecycle'               : '2.2.0',
                     'test_runner'             : '1.1.0',
                     'test_core'               : '1.3.0',
                     'test_rules'              : '1.3.0',
@@ -30,8 +29,7 @@ buildscript {
             'firebase_crashlytics'       : '17.2.2',
             'firebase_crashlytics_gradle': '2.5.2',
             'google_services'            : '4.3.10',
-            'dagger'                     : '2.35.1',
-            'dagger_hilt'                : '2.39.1',
+            'dagger_hilt'                : '2.40.5',
             'threetenabp'                : '1.1.0',
             'timber'                     : '4.7.1',
             'espresso'                   : '3.4.0',
@@ -64,6 +62,7 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.19.0"
+    id 'com.autonomousapps.dependency-analysis' version "1.0.0-rc06"
 }
 
 allprojects {
@@ -95,10 +94,12 @@ subprojects {
         }
     }
 
+
     afterEvaluate {
         if (pluginManager.hasPlugin("kotlin-kapt")) {
             kapt {
                 useBuildCache = true
+                correctErrorTypes = true
             }
         }
     }
