--- a/libraries/data/build.gradle
+++ b/libraries/data/build.gradle
@@ -8,10 +8,7 @@ dependencies {
     implementation project(":libraries:authentication-contract")
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
-
-    kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
-    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
-    kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
+    kapt "com.google.dagger:hilt-compiler:${versions.dagger_hilt}"
 
     api "com.google.firebase:firebase-firestore:${versions.firestore}"
 
