--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
                     'activity_compose'        : "1.4.0",
                     'activity_ktx'            : '1.2.0',
                     'fragment_ktx'            : '1.3.0',
+                    'lifecycle_runtime'       : '2.2.0',
                     'lifecycle_runtime_ktx'   : '2.4.1'
             ],
             'kotlin'                     : '1.6.10',
