--- a/features/importcontacts/build.gradle
+++ b/features/importcontacts/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 
     // TODO where should this go?
     debugImplementation "androidx.compose.ui:ui-test-manifest:${versions.compose}"
+    //androidTestImplementation "com.squareup.leakcanary:leakcanary-android-instrumentation:2.9.1"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 }
