--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ buildscript {
     ]
 
     repositories {
+        mavenCentral()
         google()
     }
 
@@ -63,7 +64,7 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.19.0"
-    id 'com.autonomousapps.dependency-analysis' version "1.0.0-rc06"
+    id 'com.autonomousapps.dependency-analysis' version "1.2.0"
 }
 
 allprojects {
