--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,10 +10,7 @@ jobs:
   build:
 
     runs-on: macos-latest
-    strategy:
-      matrix:
-        api-level: [ 29 ]
-    
+
     steps:
       - name: checkout
       - uses: actions/checkout@v3
@@ -28,17 +25,17 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-${{ matrix.api-level }}
+          key: avd-29
 
-       - name: create AVD and generate snapshot for caching
-         if: steps.avd-cache.outputs.cache-hit != 'true'
-         uses: reactivecircus/android-emulator-runner@v2.24.0
-         with:
-           api-level: ${{ matrix.api-level }}
-           force-avd-creation: false
-           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-           disable-animations: false
-           script: echo "Generated AVD snapshot for caching."
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2.24.0
+        with:
+          api-level: 29
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
 
       - name: google services
         run: ./signing/setup.sh "$env:GOOGLE_SERVICES_KEY"
@@ -56,7 +53,7 @@ jobs:
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2.24.0
         with:
-          api-level: ${{ matrix.api-level }}
+          api-level: 29
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
