--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,14 +12,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: checkout
       - uses: actions/checkout@v3
 
       - name: Gradle cache
         uses: gradle/gradle-build-action@v2
 
-      - name: AVD cache
-        uses: actions/cache@v3
+      - uses: actions/cache@v3
+        name: AVD cache
         id: avd-cache
         with:
           path: |
