--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Gradle cache
         uses: gradle/gradle-build-action@v2
@@ -31,6 +32,8 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2.24.0
         with:
           api-level: 29
+          target: google_apis
+          arch: x86_64
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
@@ -53,6 +56,8 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2.24.0
         with:
           api-level: 29
+          target: google_apis
+          arch: x86_64
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
