--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,12 +10,38 @@ jobs:
   build:
 
     runs-on: macos-latest
+    timeout-minutes: 50
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name : google services
-        run:  ./signing/setup.sh "$env:GOOGLE_SERVICES_KEY"
+      - name: Gradle cache
+        uses: gradle/gradle-build-action@v2
+
+      - uses: actions/cache@v3
+        name: AVD cache
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-29
+
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2.24.0
+        with:
+          api-level: 29
+          target: google_apis
+          arch: x86_64
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
+
+      - name: google services
+        run: ./signing/setup.sh "$env:GOOGLE_SERVICES_KEY"
         env:
           GOOGLE_SERVICES_KEY: ${{ secrets.GOOGLE_SERVICES_KEY }}
 
@@ -26,9 +52,14 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
-        
+
       - name: run tests
-        uses: reactivecircus/android-emulator-runner@v2.14.3
+        uses: reactivecircus/android-emulator-runner@v2.24.0
         with:
           api-level: 29
-          script: ./gradlew connectedCheck
+          target: google_apis
+          arch: x86_64
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: ./gradlew connectedCheck --stacktrace
