--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2.24.0
         with:
           api-level: 26
-          target: google_apis
+#          target: google_apis
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
@@ -57,7 +57,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2.24.0
         with:
           api-level: 26
-          target: google_apis
+#          target: google_apis
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
