--- a/features/importcontacts/build.gradle
+++ b/features/importcontacts/build.gradle
@@ -1,7 +1,10 @@
+plugins {
+    id("org.jetbrains.kotlin.plugin.compose") version "2.1.10"
+}
 apply plugin: 'com.android.library'
 apply from: "../../base-android-library.gradle"
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'com.google.devtools.ksp'
+apply plugin: 'com.google.dagger.hilt.android'
 
 android {
 
@@ -12,16 +15,15 @@ android {
     buildFeatures {
         compose true
     }
+    namespace = "com.gregmcgowan.fivesorganiser.importcontacts"
 }
 
 dependencies {
     implementation project(":foundation:core-ui")
     implementation project(":libraries:data")
 
-    implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
-    kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
-    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
-    kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
+    implementation "com.google.dagger:hilt-android:${versions.dagger}"
+    ksp "com.google.dagger:hilt-compiler:${versions.dagger}"
 
     testImplementation project(':foundation:core-test')
     androidTestImplementation project(':foundation:core-android-test')
