--- a/gradle.properties
+++ b/gradle.properties
@@ -14,12 +14,10 @@
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
+org.gradle.daemon=true
+org.gradle.logging.level=info
+org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -Dkotlin.daemon.jvm.options=-XX:MaxMetaspaceSize=1g -Dlint.nullness.ignore-deprecated=true
 
-# Allow kapt to use workers, incremental processing
-kapt.use.worker.api=true
-kapt.incremental.apt=true
-kapt.include.compile.classpath=false
 
 # Set this untill we update the full codebase
 kotlin.code.style=obsolete
