--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,18 +9,18 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 50
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Gradle cache
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v3
 
-      - uses: actions/cache@v3
-        name: AVD cache
+      - name: AVD cache
+        uses: actions/cache@v4
         id: avd-cache
         with:
           path: |
@@ -28,13 +28,18 @@ jobs:
             ~/.android/adb*
           key: avd-29
 
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
       - name: create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2.24.0
+        uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           target: google_apis
-          arch: x86_64
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
@@ -48,17 +53,16 @@ jobs:
       - name: set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
 
       - name: Build with Gradle
         run: ./gradlew build
 
       - name: run tests
-        uses: reactivecircus/android-emulator-runner@v2.24.0
+        uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           target: google_apis
-          arch: x86_64
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
