--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
+plugins {
+    id("org.jetbrains.kotlin.plugin.compose") version "2.1.10"
+}
 apply plugin: 'com.android.application'
 apply from: "../base-android-library.gradle"
-apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'dagger.hilt.android.plugin'
-
-kapt {
-    correctErrorTypes = true
-}
+apply plugin: 'com.google.devtools.ksp'
+apply plugin: 'com.google.dagger.hilt.android'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     defaultConfig {
@@ -16,17 +16,11 @@ android {
         testInstrumentationRunner "com.gregmcgowan.fivesorganiser.FivesOrganiserTestRunner"
     }
 
-    // remove once https://github.com/Kotlin/kotlinx.coroutines/issues/2023 is fixed
-    packagingOptions {
-        exclude "META-INF/licenses/**"
-        exclude 'META-INF/AL2.0'
-        exclude 'META-INF/LGPL2.1'
-    }
-
     buildFeatures {
         compose true
+        buildConfig true
     }
-
+    namespace = "com.gregmcgowan.fivesorganiser"
 }
 
 dependencies {
@@ -43,21 +37,16 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:${versions.androidx.lifecycle}"
 
     // hilt
-    implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
-    kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
-    kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
-    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
-
-    kapt "androidx.lifecycle:lifecycle-compiler:${versions.androidx.lifecycle}"
+    implementation "com.google.dagger:hilt-android:${versions.dagger}"
+    ksp "com.google.dagger:hilt-compiler:${versions.dagger}"
 
     // integration tests
     debugImplementation "androidx.compose.ui:ui-test-manifest:${versions.compose}"
     androidTestImplementation project(':foundation:core-android-test')
-    androidTestImplementation "com.google.dagger:hilt-android-testing:${versions.dagger_hilt}"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
-
+    androidTestImplementation "com.google.dagger:hilt-android-testing:${versions.dagger}"
+    kspAndroidTest "com.google.dagger:hilt-android-compiler:${versions.dagger}"
 
 }
 
-apply plugin: 'com.google.gms.google-services'
+
 
