--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,39 @@
 buildscript {
     ext.versions = [
-            'android_gradle'             : '7.1.1',
+            'android_gradle'             : '8.10.0',
             'androidx'                   : [
-                    'appcompat'               : '1.2.0',
-                    'constraint_layout'       : '1.1.3',
-                    'fragment'                : '1.0.0',
-                    'lifecycle'               : '2.2.0',
-                    'test_runner'             : '1.1.0',
-                    'test_core'               : '1.3.0',
-                    'test_rules'              : '1.3.0',
-                    'test_junit'              : '1.1.2',
-                    'test_core_testing'       : '2.1.0',
-                    'hilt_compiler'           : "1.0.0-alpha02",
-                    'hilt_lifecycle_viewmodel': "1.0.0-alpha02",
-                    'hilt_navigation_compose' : "1.0.0-rc01",
-                    'navigation_compose'      : "2.4.0-rc01",
-                    'activity_compose'        : "1.4.0",
-                    'activity_ktx'            : '1.2.0',
-                    'fragment_ktx'            : '1.3.0',
-                    'lifecycle_runtime_ktx'   : '2.4.1'
+                    'appcompat'              : '1.2.0',
+                    'constraint_layout'      : '1.1.3',
+                    'fragment'               : '1.0.0',
+                    'lifecycle'              : '2.2.0',
+                    'test_runner'            : '1.1.0',
+                    'test_core'              : '1.3.0',
+                    'test_rules'             : '1.3.0',
+                    'test_junit'             : '1.1.2',
+                    'test_core_testing'      : '2.2.0',
+                    'hilt_navigation_compose': "1.2.0",
+                    'navigation_compose'     : "2.9.0",
+                    'activity_compose'       : "1.10.1",
+                    'activity_ktx'           : '1.2.0',
+                    'fragment_ktx'           : '1.3.0',
+                    'lifecycle_runtime_ktx'  : '2.7.0'
             ],
-            'kotlin'                     : '1.6.10',
-            'kotlin_gradle_plugin'       : '1.6.10',
-            'coroutines'                 : '1.6.0',
-            'compose'                    : '1.1.0-rc01',
-            'compose_compiler'           : '1.1.0-rc02',
-            'firebase_auth'              : '21.0.1',
-            'firestore'                  : '24.0.0',
-            'firebase_crashlytics'       : '17.2.2',
-            'firebase_crashlytics_gradle': '2.5.2',
-            'google_services'            : '4.3.10',
-            'dagger'                     : '2.35.1',
-            'dagger_hilt'                : '2.39.1',
+            'kotlin'                     : '2.1.10',
+            'kotlin_gradle_plugin'       : '2.1.10',
+            'coroutines'                 : '1.10.2',
+            'compose'                    : '1.8.2',
+            'material'                   : '1.8.2',
+            'material_icons'             : '1.7.8',
+            'compose_compiler'           : '2.1.10',
+            'firebase_auth'              : '23.2.1',
+            'firestore'                  : '25.1.4',
+            'firebase_crashlytics'       : '19.4.3',
+            'firebase_crashlytics_gradle': '3.0.3',
+            'google_services'            : '4.4.2',
+            'dagger'                     : '2.56.2',
             'threetenabp'                : '1.1.0',
             'timber'                     : '4.7.1',
-            'espresso'                   : '3.4.0',
+            'espresso'                   : '3.6.1',
             'junit'                      : '4.13.2',
             'hamcrest'                   : '2.2',
             'robolectric'                : '4.0.1',
@@ -44,13 +43,14 @@ buildscript {
 
     ]
     ext.buildConfig = [
-            'minSdk'    : 21,
-            'compileSdk': 31,
+            'minSdk'    : 23,
+            'compileSdk': 35,
             'targetSdk' : 28,
     ]
 
     repositories {
         google()
+        mavenCentral()
     }
 
     dependencies {
@@ -58,12 +58,13 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_gradle_plugin"
         classpath "com.google.gms:google-services:$versions.google_services"
         classpath "com.google.firebase:firebase-crashlytics-gradle:$versions.firebase_crashlytics_gradle"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.dagger_hilt"
     }
 }
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.19.0"
+    id "com.google.devtools.ksp" version "2.1.10-1.0.31"
+    id "com.google.dagger.hilt.android" version "2.56.2" apply false
 }
 
 allprojects {
@@ -84,24 +85,17 @@ task clean(type: Delete) {
 subprojects {
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         kotlinOptions {
-            // Set JVM target to 11
-            jvmTarget = JavaVersion.VERSION_11
+            // Set JVM target to 17
+            jvmTarget = JavaVersion.VERSION_17
             allWarningsAsErrors = true
             // Opt-in to experimental compose APIs
-            freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
+            freeCompilerArgs += '-opt-in=kotlin.RequiresOptIn'
             // Enable experimental coroutines APIs, including collectAsState()
-            freeCompilerArgs += '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
-            freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.FlowPreview"
+            freeCompilerArgs += '-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
+            freeCompilerArgs += "-opt-in=kotlinx.coroutines.FlowPreview"
         }
     }
 
-    afterEvaluate {
-        if (pluginManager.hasPlugin("kotlin-kapt")) {
-            kapt {
-                useBuildCache = true
-            }
-        }
-    }
     apply plugin: "io.gitlab.arturbosch.detekt"
     detekt {
         version = "${versions.detek}"
