--- a/foundation/core-ui/build.gradle
+++ b/foundation/core-ui/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id("org.jetbrains.kotlin.plugin.compose") version "2.1.10"
+}
 apply plugin: 'com.android.library'
 apply from: "../../base-android-library.gradle"
 
@@ -6,16 +9,17 @@ android {
     buildFeatures {
         compose true
     }
+
+    namespace = "com.gregmcgowan.fivesorganiser.core.ui"
 }
 
 
 dependencies {
     api project(":foundation:core")
 
-    api "androidx.hilt:hilt-lifecycle-viewmodel:${versions.androidx.hilt_lifecycle_viewmodel}"
-
     api "androidx.lifecycle:lifecycle-extensions:${versions.androidx.lifecycle}"
     api "androidx.lifecycle:lifecycle-runtime-ktx:${versions.androidx.lifecycle_runtime_ktx}"
+    api "androidx.lifecycle:lifecycle-runtime-compose:${versions.androidx.lifecycle_runtime_ktx}"
     api "androidx.activity:activity-ktx:${versions.androidx.activity_ktx}"
 
     api "androidx.hilt:hilt-navigation-compose:${versions.androidx.hilt_navigation_compose}"
@@ -31,8 +35,8 @@ dependencies {
 
     api "androidx.compose.animation:animation:${versions.compose}"
 
-    api "androidx.compose.material:material:${versions.compose}"
-    api "androidx.compose.material:material-icons-extended:${versions.compose}"
+    api "androidx.compose.material:material:${versions.material}"
+    api "androidx.compose.material:material-icons-extended:${versions.material_icons}"
 
     api "androidx.navigation:navigation-compose:${versions.androidx.navigation_compose}"
     api "androidx.activity:activity-compose:${versions.androidx.activity_compose}"
