--- a/libraries/authentication-contract/build.gradle
+++ b/libraries/authentication-contract/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.library'
 apply from: "../../base-android-library.gradle"
 
+android {
+    namespace = "com.gregmcgowan.fivesorganiser.authentication.contract"
+}
+
 dependencies {
     implementation project(":foundation:core")
     testImplementation project(':foundation:core-test')
