--- a/libraries/authentication/build.gradle
+++ b/libraries/authentication/build.gradle
@@ -1,7 +1,17 @@
 apply plugin: 'com.android.library'
 apply from: "../../base-android-library.gradle"
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'com.google.devtools.ksp'
+apply plugin: 'com.google.dagger.hilt.android'
+
+android {
+    namespace = "com.gregmcgowan.fivesorganiser.authentication"
+}
+
+androidComponents {
+    beforeVariants(selector().all()) { variant ->
+        variant.androidTest?.enable = false
+    }
+}
 
 dependencies {
     implementation project(":foundation:core")
@@ -10,12 +20,9 @@ dependencies {
     // api as only app module should depend on this and is needed for hilt
     api "com.google.firebase:firebase-auth:${versions.firebase_auth}"
 
-    implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
+    implementation "com.google.dagger:hilt-android:${versions.dagger}"
+    ksp "com.google.dagger:hilt-compiler:${versions.dagger}"
 
-    kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
-    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
-    kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
     testImplementation project(':foundation:core-test')
-
 
 }
